fixed overflow

--- a/src/components/nav/Navbar.css
+++ b/src/components/nav/Navbar.css
@@ -9,6 +9,7 @@
 
 .madeBy {
     justify-content: flex-end;
+    right: 0;
 }
 
 nav {
